-Add: Possibility to write temporary files to /dev/shm
-Change: Prevent options dialogs from getting too wide
-Change: Automatically remove FAT incompatible characters if output directory is on a FAT volume
-Fix: CDDB requests
-Fix: Handle files with dollar signs and backticks (`) correctly
-Fix: Filnames wouldn't be FAT compatible if output mode was copy directory structure

1.0.0:
-Add: Option to choose between APE and ID3v2  tags for mp3gain and aacgain
-Add: Hungarian translation (by Dr. Orosz Tamás)
-Add: French translation (by Yannick Ernult)
-Change: Make it possible to overwrite hidden lame parameters with the additional parameters option
-Change: Distinguish between aac and m4a files, where aac is the transport stream and m4a an mp4 container with aac data; mp4 is the video container
-Fix: Call neroAacEnc with the correct bitrate
-Fix: Undo mp3gain and aacgain changes correctly
-Fix: Load the right Replay Gain plugin

0.9.95 (1.0.0 rc3):
-Add: Updated czech translation (by Pavel Fric)
-Add: Read Replay Gain in more formats
-Add: Save last 5 output directory paths (accessible through the directory combobox)
-Add: Option to specify how the Replay Gain scanner should group files
-Change: Close soundkonverter if --autoclose was passed, even if the main window is visible
-Change: Remove internal Replay Gain calculation from lame plugin since it's not writing tags
-Change: Use PATH variable to find backends
-Change: Activate Replay Gain tool when adding files
-Fix: Display correct conversion options in the conversion options editor with multiple files selected
-Fix: Apply output directory to the conversion options input widget
-Fix: Don't update conversion options or tags in the conversion options editor with multiple files selected if they don't match
-Fix: Make edit conversion options/tags buttons in the conversion options editor work
-Fix: Fix possible crash in the log viewer
-Fix: Handle files with quotation characters (") correctly