@@ -4,7 +4,11 @@
 
 ReplayGainPluginItem::ReplayGainPluginItem( QObject *parent )
     : BackendPluginItem( parent )
-{}
+{
+    data.fileCount = 0;
+    data.processedFiles = 0;
+    data.lastFileProgress = 0;
+}
 
 ReplayGainPluginItem::~ReplayGainPluginItem()
 {}
