@@ -10,6 +10,7 @@
 -Fix: CDDB requests
 -Fix: Handle files with dollar signs and backticks (`) correctly
 -Fix: Filnames wouldn't be FAT compatible if output mode was copy directory structure
+-Fix: Display correct progress when applying Replay Gain to multiple ogg vorbis files
 
 1.0.0:
 -Add: Option to choose between APE and ID3v2  tags for mp3gain and aacgain
